<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.server24-7</groupId>
	<artifactId>cloudspigot</artifactId>
	<packaging>jar</packaging>
	<version>1.8.10-R0.1-SNAPSHOT</version>
	<name>CloudSpigot</name>
	<url>https://cloudspigot.server24-7.eu/</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<api.version>1.8.8-R0.1-SNAPSHOT</api.version>
		<minecraft.version>1.8.10</minecraft.version>
		<minecraft_version>1_8_R3</minecraft_version>
		<buildtag.prefix>git-Bukkit-</buildtag.prefix>
		<buildtag.suffix></buildtag.suffix>
	</properties>

	<repositories>
		<repository>
			<id>server24-7</id>
			<url>https://mvn.server24-7.eu/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>net.sf.trove4j</groupId>
			<artifactId>trove4j</artifactId>
			<version>3.0.3</version>
		</dependency>
		<dependency>
			<groupId>eu.server24-7</groupId>
			<artifactId>minecraft-server</artifactId>
			<version>1.8.9-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.jopt-simple</groupId>
			<artifactId>jopt-simple</artifactId>
			<version>3.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.minecrell</groupId>
			<artifactId>terminalconsoleappender</artifactId>
			<version>1.1.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>4.5.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-iostreams</artifactId>
			<version>2.11.1</version>
			<scope>compile</scope>
		</dependency>
		<!-- Required to add the missing Log4j2Plugins.dat file from log4j-core 
			which has been removed by Mojang. Without it, log4j has to classload all 
			its classes to check if they are plugins. Scanning takes about 1-2 seconds 
			so adding this speeds up the server start. -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.7.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.14</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<!-- bundled with Minecraft, should be kept in sync -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>17.0</version>
			<scope>compile</scope>
		</dependency>
		<!-- bundled with Minecraft, should be kept in sync -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>org.avaje</groupId>
			<artifactId>ebean</artifactId>
			<version>2.8.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.15</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-chat</artifactId>
			<version>1.8-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<!-- testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- required until fixed plexus-compiler-eclipse is deployed -->
	<pluginRepositories>
		<pluginRepository>
			<id>spigotmc-public</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</pluginRepository>
		<!-- CloudSpigot - Repo for gitdescribe -->
		<pluginRepository>
			<id>destroystokyo</id>
			<url>https://ci.destroystokyo.com/plugin/repository/everything/</url>
		</pluginRepository>
	</pluginRepositories>

	<!-- This builds a completely 'ready to start' jar with all dependencies 
		inside -->
	<build>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<groupId>com.lukegb.mojo</groupId>
				<artifactId>gitdescribe-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<outputPrefix>git-CloudSpigot-</outputPrefix>
					<scmDirectory>.</scmDirectory>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>gitdescribe</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<forceCreation>true</forceCreation> <!-- Required to prevent shading the jar multiple times -->
					<archive>
						<manifestEntries>
							<Main-Class>org.bukkit.craftbukkit.Main</Main-Class>
							<Implementation-Title>CraftBukkit</Implementation-Title>
							<Implementation-Version>${describe}</Implementation-Version>
							<Implementation-Vendor>Bukkit Team</Implementation-Vendor>
							<Specification-Title>Bukkit</Specification-Title>
							<Specification-Version>${api.version}</Specification-Version>
							<Specification-Vendor>Bukkit Team</Specification-Vendor>
						</manifestEntries>
						<manifestSections>
							<manifestSection>
								<name>net/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
							<manifestSection>
								<name>com/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
							<manifestSection>
								<name>org/bukkit/</name>
								<manifestEntries>
									<Sealed>true</Sealed>
								</manifestEntries>
							</manifestSection>
						</manifestSections>
						<compress>false</compress>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer" />
							</transformers>
							<relocations>
								<relocation>
									<pattern>joptsimple</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.joptsimple</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.ibex</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.org.ibex</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.gjt</pattern>
									<shadedPattern>org.bukkit.craftbukkit.libs.org.gjt</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bukkit.craftbukkit</pattern>
									<shadedPattern>org.bukkit.craftbukkit.v${minecraft_version}</shadedPattern>
									<excludes>
										<exclude>org.bukkit.craftbukkit.Main*</exclude>
									</excludes>
								</relocation>
								<relocation>
									<pattern>net.minecraft.server</pattern>
									<shadedPattern>net.minecraft.server.v${minecraft_version}</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.github.edwgiz</groupId>
						<artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
						<version>2.8.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<optimize>true</optimize>
					<compilerArgs>
						<arg></arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.0.5</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
		</plugins>
	</build>
</project>
